--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "html": "^1.0.0",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
   }
